# Edge_Bundling

./: .gitignore  README.md  requirements.txt  weather_data.pvsm
Local-Iterative-Optimization-for-Graph-Bundling/: Thesis.aux  Thesis.bcf  Thesis.bib  Thesis.tex  Thesis.toc
Local-Iterative-Optimization-for-Graph-Bundling/Sources/: Abstract.aux  Abstract.tex  Conclusion.tex  DeclarationOfAuthorship.aux  DeclarationOfAuthorship.tex  Discussion.tex  Fundamentals.tex  (+11 more)
PrototypePlugin/: CMakeLists.txt
PrototypePlugin/StreamTracerPlugin/: CMakeLists.txt
PrototypePlugin/StreamTracerPlugin/plugin/: CMakeLists.txt  paraview.plugin
PrototypePlugin/StreamTracerPlugin/plugin/StreamTracerFilters/: CMakeLists.txt  MyStreamTracerFilter.xml
code/: agent.py  bachelor_thesis.code-workspace  create_grid.py  debug.py  environment.py  grid_components.py  helper.py  main.py  output.py  post_processing.py  pylintrc  quality_metric.py  read_steiner_lib.py  simulation.py  transfer_json.py
data/: 100x100_test_graph.json  10x10_10n_30e.json  10x10_test_graph.json  15x15_10n_40e.json  25x25_10n_30e.json  2x2_test_graph.json  3_node_graph.json  3x3_test_graph.json  500x500_test_graph.json  50x50_test_graph.json  5_node_graph.json  5x5_10n_30e.json  5x5_test_graph.json  9_node_graph.json  big_graph.json  default_graph.json  paper_graph.json  real_graph.json
example_plugin/: CMakeLists.txt
helper/: create_graph_data.py  quality_metric.py  transfer_json.py
meeting_notes/: 2021-10-27.md  2021-11-03.md  2021-11-10.md  2021-11-17.md  2021-12-01.md  2021-12-15.md  2022-01-12.md  2022-04-06.md  2022-04-11.md  2022-04-19.md  2022-04-25.md  2022-05-02.md  2022-05-09.md  2022-05-18.md  2022-05-23.md  2022-05-30.md  2022-06-13.md  2022-06-20.md  2022-06-27.md  2022-07-04.md  2022-07-18.md  2022-07-25.md  2022-08-01.md  2022-08-08.md  2022-08-22.md  2022-08-31.md  2022-10-17.md  2022-10-24.md  2022-10-31.md  2022-11-07.md  2022-11-14.md  2022-12-05.md
prototype_plugin/: CMakeLists.txt
prototype_plugin/Plugin/: CMakeLists.txt  paraview.plugin
prototype_plugin/Plugin/ElevationFilters/: CMakeLists.txt
prototype_plugin/Plugin/StreamTracerFilters/: CMakeLists.txt  vtk.module  vtkMyStreamTracerFilter.cxx  vtkMyStreamTracerFilter.h
prototype_plugin/Plugin/TracerFilters/: CMakeLists.txt  MyTracerFilter.xml  tracer.h  vtk.module  vtkMyTracerFilter.cxx  vtkMyTracerFilter.h
stuff/: changelog.txt  metrics.py  plot_graph.py  polycephalum_test.py  profiler.txt
thesis/: Thesis.bib  Thesis.tex
vtkPrototype/reader/: CMakeLists.txt  vtkVectorToScalar.cxx
(+34 files in other folders)
